# application/controllers/Console.php
@@ -138,11 +138,13 @@ class Console extends EA_Controller
         $providers = $this->providers_model->get();
 
         foreach ($providers as $provider) {
-            if (!filter_var($provider['settings']['google_sync'], FILTER_VALIDATE_BOOLEAN)) {
-                continue;
+            if (filter_var($provider['settings']['google_sync'], FILTER_VALIDATE_BOOLEAN)) {
+                Google::sync((string) $provider['id']);
             }
 
-            Google::sync((string) $provider['id']);
+            if (filter_var($provider['settings']['caldav_sync'], FILTER_VALIDATE_BOOLEAN)) {
+                Caldav::sync((string) $provider['id']);
+            }
         }
     }
 
